# asteroids-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  compile_commands.json  readme.md  toolchain-win-x86-64.cmake
src/: main.c
